# Chess-engine

./: CMakeLists.txt  README.md  attack_tables.cpp  attack_tables.h  bitboard.cpp  bitboard.h  bitgamestate.cpp  bitgamestate.h  connect_gui.cpp  connect_gui.h  evaluation.cpp  evaluation.h  gg  main.cpp  randomNum.cpp  randomNum.h  search.cpp  search.h  time.cpp  time.h
